<resources>
    <string name="app_name">Psy.Tests</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="warning_message">Results and interpretations obtained without the participation of specialists should not be taken too seriously.
Only tests conducted by a professional psychologist are of diagnostic value.</string>
    <string name="category_psy">Psychology</string>
    <string name="category_fun">Fun</string>
    <string name="category_relationships">Relationships</string>
    <string name="category_career">Career</string>
    <string name="full_screen_ad_id" translatable="false">ca-app-pub-8407125762950584/1206483423</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question">Question</string>
    <string name="delete_all_results">Delete all results?</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="warning">Warning</string>
    <string name="low_level">Low level</string>
    <string name="middle_level">Average level</string>
    <string name="high_level">High level</string>
    <string name="save_results">Save tests result</string>
    <string name="version">Version</string>
    <string name="review_app">Rate us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="result">Result</string>
    <string name="test_description">Test description</string>
    <string name="pass">Start</string>
    <string name="privacy_link">https://docs.google.com/document/d/1Dlt4cGz-V3wP3UXUY0LPwKErWBxuE_xHOBnp5BYQ-Zc</string>
    <string name="no_history">No history yet</string>
    <string name="test_of_day">Recommended</string>
    <string name="categories">Categories</string>
    <string name="my_results">My results</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact us</string>
    <string name="luscher_pause_title">Take a rest for 5 minutes</string>
    <string name="luscher_pause_text">The testing method involves two approaches with a small interval between them. Please wait a few minutes, and then click "continue". Don\'t try to remember the order in which you chose the colors the first time. But do not try to specifically put them in a different way. Just choose your favorite colors as if you are seeing them for the first time</string>
    <string name="continue_text">Continue</string>
    <string name="pause">Pause</string>
    <string name="warning_message_2">We do not give detailed interpretations of the results so that you can discuss your preliminary result with a specialist.</string>
    <string name="back">Back</string>
    <string name="szondi_positive_instruction">Choose the two most pleasant or cute portrait. If you don\'t like any of them, then choose the two least unpleasant ones</string>
    <string name="szondi_negative_instruction">Choose two of the most unpleasant, unsympathetic portraits</string>
    <string name="five_scales_low_score">Low score</string>
    <string name="five_scales_below_average">Below average</string>
    <string name="five_scales_average_rates">Average values</string>
    <string name="five_scale_values_above_average">Above average</string>
    <string name="five_scales_high_index">High values</string>
    <string name="luscher_result_4">Perception of arousal to discharge tension. Waiting for meetings, disclosure, fussiness, escape from problems, illusory expectation of the future.</string>
    <string name="luscher_result_1">The desire for peace. Intense need for pleasant communication and satisfaction, striving for harmony, sensitivity.</string>
    <string name="luscher_result_2">Willpower. Self-assertion, vanity, spontaneous desire to play a certain role.</string>
    <string name="luscher_result_3">Striving for emotions. Active participation and high activity.</string>
    <string name="luscher_result_5">Readiness for peace without tension, pleasant relationships and satisfaction.</string>
    <string name="luscher_result_6">Self-determination, self-control.</string>
    <string name="luscher_result_7">Stagnation, annoyance, irritability.</string>
    <string name="luscher_result_8">Ready for contacts.</string>
    <string name="luscher_result_9">Surface connections and relationships.</string>
    <string name="luscher_result_10">Low level of pretension, passive attitude to social order.</string>
    <string name="luscher_result_11">Nervous irritability, needs careful handling, lack of desires.</string>
    <string name="luscher_result_12">Critical attitude to the choice of contacts and hobbies.</string>
    <string name="luscher_result_13">Anxiety, fussiness, lack of deep "heart" connections, dissatisfaction with the relationship with a partner and their activities.</string>
    <string name="luscher_result_14">Restriction of self-expression, protective tension, denied recognition. Others are perceived as exerting cruel, heartless pressure, forcing them to do what they do not want.</string>
    <string name="luscher_result_15">Overexpression, feeling of weakness, feeling of helplessness. Offended, hardly copes with business. Tired and poorly oriented in the environment.</string>
    <string name="luscher_result_16">Restless waiting. Thematic fixation, limitation of self-disclosure. Stiffness, overexcitation.</string>
    <string name="luscher_result_17">Isolation, cautious restraint, closeness, secrecy, social isolation.</string>
    <string name="luscher_result_18">The desire to charm, sensuality, suggestibility.</string>
    <string name="luscher_result_20">Expression of protest, negativism, impulsive and aggressive behavior.</string>
    <string name="luscher_result_19">Regression to physical needs, escape from problems.</string>
    <string name="luscher_result_21">Limited emotional readiness for contacts. Disconnection.</string>
    <string name="luscher_result_22">Sensuality.</string>
    <string name="luscher_result_23">The need for comfort and physical satisfaction.</string>
    <string name="luscher_result_24">Protest and withdrawal from a partner or situation.</string>
    <string name="luscher_result_25">Emotional readiness to communicate. Interest in social relations.</string>
    <string name="luscher_result_26">Restrains his feelings. Reflection of feelings. Scrupulousness. Sensitivity and touchiness.</string>
    <string name="luscher_result_27">Discharge of physical needs.</string>
    <string name="luscher_result_28">The ability to tolerate limitations, to make compromises. Agrees to the terms.</string>
    <string name="luscher_result_29">Emotional excitability, striving for social success.</string>
    <string name="luscher_result_30">Suppression of sensitivity, control of feelings. Aesthetic, ethical, or logical pursuit of order.</string>
    <string name="luscher_result_31">Suppression, displacement or inhibition of physical needs.</string>
    <string name="luscher_result_32">Rejection of interference and restrictions, ignoring threats, enterprise.</string>
    <string name="luscher_result_33">Feeling of contentment, calmness, desire for a calm environment, unwillingness to participate in conflicts, stress.</string>
    <string name="luscher_result_34">A sense of integrity, an active and not always conscious desire for a close relationship. The need for attention from others.</string>
    <string name="luscher_result_35">Slight anxiety, the need for a subtle environment, the desire for aesthetic.</string>
    <string name="luscher_result_36">Feeling of anxiety, fear of loneliness, desire to get away from conflict, avoid stress.</string>
    <string name="luscher_result_37">Negative state, desire for peace, rest, dissatisfaction with self-attitude, negative attitude to the situation.</string>
    <string name="luscher_result_38">Negative state, the need to get rid of stress, the desire for peace, rest.</string>
    <string name="luscher_result_39">Negative state, the need to get rid of stress, the desire for peace, rest.</string>
    <string name="luscher_result_40">A positive state, a desire for recognition, for activities that ensure success.</string>
    <string name="luscher_result_41">Active pursuit of success, independent decisions, overcoming obstacles in activit.y</string>
    <string name="luscher_result_42">Slight anxiety, desire for recognition, popularity, desire to impress.</string>
    <string name="luscher_result_43">Slight anxiety, desire for recognition, popularity, desire for super impressions, increased attention to the reactions of others to their actions.</string>
    <string name="luscher_result_44">Feeling of dissatisfaction, fatigue, overestimation of the importance of the attitude towards oneself from others.</string>
    <string name="luscher_result_45">Dissatisfaction, desire for recognition, desire to impress.</string>
    <string name="luscher_result_46">Feelings of resentment, anger, desire for pity, authoritarianism in relationships.</string>
    <string name="luscher_result_47">Feelings of resentment, anger, desire for pity, authoritarianism in relationships.</string>
    <string name="luscher_result_48">Business excitement, active pursuit of activities, impressions, pleasures.</string>
    <string name="luscher_result_49">Business excitement, active pursuit of goals, overcoming all difficulties, striving for a high evaluation of their activities.</string>
    <string name="luscher_result_50">Businesslike, slightly increased excitement, enthusiasm, optimism, desire for contacts, expansion of the field of activity.</string>
    <string name="luscher_result_51">Increased excitement, not always adequate enthusiasm, the desire to impress.</string>
    <string name="luscher_result_52">Negative mood, frustration due to failure, unwillingness to lose a favorable situation.</string>
    <string name="luscher_result_53">Negative mood, anger, desire to get out of an unfavorable situation.</string>
    <string name="luscher_result_54">A feeling of dissatisfaction, a focus on risky action.</string>
    <string name="luscher_result_55">A feeling of dissatisfaction, a focus on risky action.</string>
    <string name="luscher_result_56">The mood is generally positive, striving for a positive emotional state, mutual support.</string>
    <string name="luscher_result_57">The mood is generally positive, the desire to find the first ways to solve the problems, the desire for self-affirmation.</string>
    <string name="luscher_result_58">Somewhat increased business excitement, the desire for broad activity.</string>
    <string name="luscher_result_59">A little euphoria, a desire for bright events, a desire to impress.</string>
    <string name="luscher_result_60">Negative mood, frustration and the need for emotional release and rest.</string>
    <string name="luscher_result_61">A very negative mood, a desire to get away from any problems, a tendency to necessary, inadequate solutions.</string>
    <string name="luscher_result_summary_1">Desired goals, or behavior dictated by desired goals</string>
    <string name="luscher_result_summary_2">Rejected or suppressed behaviors, or sources of concern</string>
    <string name="luscher_result_summary_3">Personality traits</string>
    <string name="luscher_result_summary_4">The current state of things and the behavior appropriate for this state of things</string>
    <string name="test20_result_summary_1">Self-doubt</string>
    <string name="test20_result_summary_2">Cognitive and social passivity</string>
    <string name="test20_result_summary_3">Neurotic behavior overcontrol</string>
    <string name="test20_result_summary_4">Affective instability</string>
    <string name="test20_result_summary_5">Introverted personality orientation</string>
    <string name="test20_result_summary_6">Hypochondriacal</string>
    <string name="test20_result_summary_7">Social maladaptivity</string>
</resources>